Nuevo menú y un poco de contenido

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -40,52 +40,6 @@ body{
 }
 
 /*
-	CSS correspondiente al menú nav
-*/
-
-.navigation {
-    background-color: #5aa492;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    
-}
-
-.navigation a:hover{
-    background-color: rgba(255, 255, 255, 0.3);
-}
-
-header .navigation {
-    display: table;
-}
-
-nav{
-    position: sticky;
-    top: 0;
-}
-
-nav ul{
-    display: flex;
-}
-
-nav ul li{
-    list-style: none;
-}
-
-nav ul li a{
-    display: block;
-    color: white;
-    height: 10px;
-    text-decoration: none;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-right: 50px;
-    padding-left: 50px;
-    border-right: 1px solid #2e6b61;
-    border-left: 1px solid #2e6b61;
-}
-
-/*
 	CSS correspondiente a todo lo que contenga el CLASS "contenedor"
 */
 
@@ -93,19 +47,38 @@ nav ul li a{
     width: 80%;
     margin: auto;
     background-color: white;
-    display: flex;
 	align-content: center;
-	flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+.contenedor h1{
+    display: flex;   
+    align-content: center;
+    justify-content: center;
+}
+
+.preguntas{
+    border: 1px solid #2e6b61;
+    width: 40%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
     justify-content: center;
 }
 
 /*
-	CSS correspondiente a algo de sidebar que no se ha hecho nada con eso xd
+    CSS correspondiente al footer de abajo
 */
 
-.sidebar{
-    background-color: #5aa492;
+footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 25px;
+    background-color: #2e6b61;
 }
 
-
-
+.copy {
+    font-size: 20px;
+}
