--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ ul{
 }
 
 /*------ SHOW CASE -----*/
-.showcase {
+.showcase{
     width: 100%;
     height: 550px;
     background: url(images/showcase11.jpg) no-repeat center center/cover;
@@ -92,6 +92,66 @@ ul{
 
 }
 
+/*show list*/
+
+.showlist1 {
+    width: 100%;
+    height: 550px;
+    background: url(images/showcase8.jpeg) no-repeat center center/cover;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+
+.showlist2 {
+    width: 100%;
+    height: 550px;
+    background: url(images/showcase5.jpeg) no-repeat center center/cover;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+.showlist3 {
+    width: 100%;
+    height: 550px;
+    background: url(images/showcase4.jpeg) no-repeat center center/cover;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+
+.showlist4 {
+    width: 100%;
+    height: 550px;
+    background: url(images/showcase6.jpeg) no-repeat center center/cover;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+.showlist5 {
+    width: 100%;
+    height: 550px;
+    background: url(images/showcase9.jpg) no-repeat center center/cover;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+/* --------------- */
 /*clase boton*/
 .btn{
     cursor: pointer;
