--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -55,3 +55,55 @@ footer{
 .copy {
     font-size: 20px;
 }
+
+/*---------------- estilos cards ------------*/
+
+.containercard {
+    width: 100%;
+    max-width: 1200px;
+    height: 430px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
+}
+
+.containercard .card{
+    width: 330px;
+    height: 470px;
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.25s;
+    background-color: white;
+}
+
+.containercard .card:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.containercard .card img{
+    width: 330px;
+    height: 220px;
+    
+}
+
+.containercard .card h4{
+    font-weight: 600;
+
+}
+
+.containercard .card p{
+    padding: 0 1rem;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.containercard .card a {
+    font-weight: 500;
+    text-decoration: none;
+    color: blue;
+}
