--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -108,3 +108,57 @@ footer{
     text-decoration: none;
     color: blue;
 }
+
+/*------- estilo de los artículos --------- */
+
+.container-content {
+    width: 1200px;
+    margin: auto;
+    margin-top: 40px;
+    
+}
+
+article{
+    width: 100%;
+    padding: 20px;
+    padding-bottom: 40px;
+    box-shadow: -10px 0 20px -30px black;
+    border-radius: 6px;
+    overflow: hidden;
+    background-color: white;
+    position: relative;
+}
+
+article::before{
+    content: '';
+    width: 100%;
+    height: 6px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #2e6b61;
+}
+
+article h1{
+    margin-top: 20px;
+    font-weight: 500;
+    font-size: 40px;
+}
+
+article h2{
+    margin-top: 20px;
+    font-weight: 500;
+    font-size: 40px;
+}
+
+article p{
+    margin-top: 20px;
+    font-size: 18px;
+    color: gray;
+    text-align: justify;
+}
+
+article img{
+    width: 50%;
+    margin-top: 20px;
+}
