se agregaron recetas con articulos enlazados a las cards

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -154,7 +154,7 @@ article h2{
 article p{
     margin-top: 20px;
     font-size: 18px;
-    color: gray;
+    color: black;
     text-align: justify;
 }
 
