--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -162,3 +162,46 @@ article img{
     width: 50%;
     margin-top: 20px;
 }
+
+
+/* -------- estilos del showcase ------- */
+.showcase{
+    width: 100%;
+    height: 550px;
+    background-image: url("/images/showcase/showcase11.jpg") ;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+}
+
+.btn{
+    cursor: pointer;
+    display: inline-block;
+    border: 0;
+    font-weight: bold;
+    padding: 10px 20px;
+    background: #2e6b61;
+    color: #ffffe1;
+    font-size: 15px;
+    border: 1px solid #fff;
+    margin: 10px 0;
+
+}
+
+.btn:hover{
+    opacity: .7;
+}
+
+.showcase h2{
+    margin-bottom: 10px;
+    color: #ffffe1;
+
+}
+
+.showcase p{
+    margin-bottom: 10px;
+    color: #ffffe1;
+}
