--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -168,7 +168,8 @@ article img{
 .showcase{
     width: 100%;
     height: 550px;
-    background-image: url("/images/showcase/showcase11.jpg") ;
+    /*background-image: url("/images/showcase/showcase11.jpg"); */
+    background: url(/images/showcase/showcase11.jpg) no-repeat center center/cover;
     padding-bottom: 50px;
     display: flex;
     flex-direction: column;
