--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10267,7 +10267,9 @@ header.masthead {
   background-attachment: scroll;
   position: relative;
   background-size: cover;
+  height: 30em;
 }
+
 header.masthead .overlay {
   position: absolute;
   top: 0;
